--- a/app/src/main/res/menu/bottom_nav_menu.xml
+++ b/app/src/main/res/menu/bottom_nav_menu.xml
@@ -3,27 +3,28 @@
 
     <item
         android:id="@+id/navigation_home"
-        android:icon="@drawable/ic_home_black_24dp"
-        android:title="@string/title_home" />
+        android:icon="@drawable/home_icon_selector"
+        android:title="@string/title_home"
+        />
 
     <item
         android:id="@+id/navigation_readings"
-        android:icon="@drawable/ic_dashboard_black_24dp"
-        android:title="@string/title_dashboard" />
+        android:icon="@drawable/readings_icon_selector"
+        android:title="@string/readings" />
 
     <item
-        android:id="@+id/navigation_ride"
-        android:icon="@drawable/ic_notifications_black_24dp"
-        android:title="@string/title_notifications" />
+        android:id="@+id/navigation_location"
+        android:icon="@drawable/location_icon_selector"
+        android:title="@string/location" />
 
     <item
-        android:id="@+id/navigation_tips"
-        android:icon="@drawable/ic_dashboard_black_24dp"
-        android:title="@string/title_dashboard" />
+        android:id="@+id/navigation_cycling_tips"
+        android:icon="@drawable/tips_icon_selector"
+        android:title="@string/cycling_tips" />
 
     <item
         android:id="@+id/navigation_profile"
-        android:icon="@drawable/ic_notifications_black_24dp"
-        android:title="@string/title_notifications" />
+        android:icon="@drawable/profile_icon"
+        android:title="@string/profile" />
 
 </menu>
