--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -6,4 +6,5 @@
 
     <color name="myColor">#3172AC</color>
     <color name="buttonDisabledColor">#7CBAF1</color>
+    <color name="orangeColor">#F2A104</color>
 </resources>
