--- a/app/src/main/res/layout/readings_fragment.xml
+++ b/app/src/main/res/layout/readings_fragment.xml
@@ -1,13 +1,45 @@
 <?xml version="1.0" encoding="utf-8"?>
-<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    android:paddingEnd="20dp"
+    android:paddingStart="20dp"
     tools:context=".ui.home.ReadingsFragment">
 
-    <TextView
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:text="Hello" />
+<com.google.android.material.button.MaterialButton
+    android:id="@+id/newReadingButton"
+    android:layout_width="wrap_content"
+    android:layout_height="wrap_content"
+    android:layout_marginTop="40dp"
+    app:layout_constraintEnd_toEndOf="parent"
+    app:layout_constraintTop_toTopOf="parent"
+    android:text="@string/new_reading"
+    android:textAllCaps="false"
+    android:backgroundTint="@color/orangeColor"
+    app:cornerRadius="6dp"
+    />
 
-</FrameLayout>
+<View
+    android:id="@+id/separator"
+    android:layout_width="wrap_content"
+    android:layout_height="2dp"
+    android:layout_marginTop="20dp"
+    android:background="@color/myColor"
+    app:layout_constraintTop_toBottomOf="@id/newReadingButton"
+    app:layout_constraintEnd_toEndOf="@id/newReadingButton"
+    app:layout_constraintStart_toStartOf="parent"
+    />
+
+<androidx.recyclerview.widget.RecyclerView
+    android:id="@+id/readingRecyclerView"
+    android:layout_width="match_parent"
+    android:layout_height="0dp"
+    android:layout_marginTop="20dp"
+    app:layout_constraintTop_toBottomOf="@id/separator"
+    app:layout_constraintBottom_toBottomOf="parent"
+    app:layout_constraintEnd_toEndOf="parent"
+    app:layout_constraintStart_toStartOf="parent"
+    />
+</androidx.constraintlayout.widget.ConstraintLayout>
